@@ -1,3 +1,8 @@
+Sat Aug 23 18:45:44 1997  Gary Houston  <ghouston@actrix.gen.nz>
+
+	* errno.h: prototype for scm_strerror.
+	* error.c (scm_strerror): new procedure.
+
 Mon Aug 18 14:58:22 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* list.c (scm_list_append_x): Allow non-pair as last argument.
